# travel_agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  playwright.config.ts  pyproject.toml
.cursor/rules/: auto-run-tests.mdc  route1-architecture.mdc  specify-rules.mdc
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: dependencies.py  lifespan.py  main.py  settings.py
backend/scripts/: cleanup_old_checkpoints.py  create_admin.py  demo_agent.py  demo_graph_flow.py  demo_graph_state.py  demo_memory.py  demo_plan_destination_llm.py  demo_plan_transport_llm.py  demo_step_prompt.py  ingest_documents.py  init_db.py  init_rag.py  init_redis_checkpoint.py  interactive_planner_chat.py  run_graph_once.py  run_server.py  seed_data.py  test_mimo.py  test_rag_pipeline.py
backend/tests/: conftest.py  test_agent_autonomous_rag.py  test_anti_hallucination.py  test_approval_router.py  test_auth_deps.py  test_automated_manual_cases.py  test_automated_skip_cases.py  test_budget_sanitize.py  test_budget_tiers.py  test_build_itinerary.py  (+80 more)
docs/: api.md  architecture.md  database.md  deployment.md  destination-resolution-policy.md  langgraph_flow.md  lexicon-extension.md  mcp.md  p2-tasks.md  p3-tasks.md
e2e/: auth-extended.spec.ts  auth.spec.ts  exception-path.spec.ts  full-journey.spec.ts  helpers.ts  integration-resilience.spec.ts  main-path.spec.ts  revision-path.spec.ts  session-ui.spec.ts  ui-components.spec.ts
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
scripts/: dev.ps1  run_test_case.py  sync_test_case_docs.py
(+374 files in other folders)
