[project]
name = "travel_agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # LLM 集成
    "dashscope==1.25.4",
    # 数据库
    "psycopg[binary,pool]==3.3.2",
    "redis>=5.2.1",
    "chromadb==0.5.23",
    # Web 框架
    "fastapi==0.124.4",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",
    # RAG 相关
    "langchain-chroma>=0.1.4",
    "sentence-transformers==3.3.0",
    "rank-bm25==0.2.2",
    "jieba==0.42.1",
    # MCP 相关
    "langchain-mcp-adapters==0.2.1",
    "fastmcp==2.13.1",
    # 工具库
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "tenacity==9.1.2",
    "httpx==0.28.1",
    "aiohttp==3.13.2",
    # 监控与日志
    "loguru==0.7.2",
    "prometheus-client==0.21.0",
    # 其他依赖
    "SQLAlchemy~=2.0.45",
    "langchain-text-splitters~=1.1.0",
    "typing_extensions~=4.15.0",
    "Jinja2~=3.1.6",
    "psycopg-pool~=3.3.0",
    "bcrypt~=5.0.0",
    "PyJWT~=2.10.1",
    "langchain-openai~=1.1.7",
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-timeout~=2.4.0",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "alembic>=1.18.4",
    "langgraph-checkpoint-redis>=0.4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
# 默认只跑单元测试；集成测试需显式: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: 需要 MIMO_API_KEY 与外部 LLM 的集成测试（MCP 不可达时自动回退 mock）",
    "mcp_live: 需要 12306/高德/Variflight MCP 网络可达的真实 MCP 测试",
    "smoke: 冒烟测试（主路径 + 修订 + 异常）",
    "smoke_main: 冒烟 — 主路径路由与引导",
    "smoke_revision: 冒烟 — 审批修订分支",
    "smoke_exception: 冒烟 — 语义异常与防幻觉",
]
timeout = 200
timeout_method = "thread"
